--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "description": "backend for cloth store",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^5.0.0",
